--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -1,7 +1,7 @@
 arb:
   rights:
     administrate_accountancy: "مدخل لوحدة المحاسبة" #?
-    backup_company: "تطبيق / تحديث النسخ الاحتياطية"
+    backup_company: "تطبيق / تحديث النسخ الاحتياطية" #?
     bookkeep: "مبادلة الاجراءات التجارية للمحاسبة"
     cancel_sales_invoices: "الاحذ بالموجودات"
     change_prices_on_sales: "تغيير اسعار البيع"
