--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -146,7 +146,7 @@ jpn:
     backend/cultivable_zones:
       # edit: "Modifier la zone cultivable\_: %{name}"
       # index: "Zones cultivables"
-      # new: "Nouvelle zone cultivable\_: %{name}"
+      # new: "Nouvelle zone cultivable"
       # show: "Zone cultivable %{name}"
     backend/custom_field_choices:
       # edit: "Modifier l’option\_: %{name}"
@@ -1735,10 +1735,6 @@ jpn:
       # one: "%{count} encaissement"
       # other: "%{count} encaissements"
       # zero: "0 encaissement"
-    x_readings:
-      # one: "%{count} indicateur"
-      # other: "%{count} indicateurs"
-      # zero: "0 indicateur"
     x_intervention_casts:
       # one: "%{count} intervention"
       # other: "%{count} interventions"
@@ -1783,6 +1779,10 @@ jpn:
       # one: "%{count} achat"
       # other: "%{count} achats"
       # zero: "0 achat"
+    x_readings:
+      # one: "%{count} indicateur"
+      # other: "%{count} indicateurs"
+      # zero: "0 indicateur"
     x_results:
       # one: "%{count} résultat trouvé"
       # other: "%{count} résultats trouvés"
