refactorize building,building_divisions first_run to zones, adapt first_run and clean code.

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1953,6 +1953,7 @@ fra:
         plant_medicine: "Produit phytosanitaire"
         running_water: "Eau du réseau"
         seed: "Semence"
+        # settlement: "Settlement"
         small_equipment: "Petit matériel"
         straw: "Paille"
         wine: "Vin"
@@ -2001,8 +2002,8 @@ fra:
         alfalfa_seed: "Semence de luzerne"
         all_inclusive_corn_sower: "Semoir Maïs tout intégré"
         animal_building: "Bâtiment d’accueil pour les animaux"
-        animal_building_division: "Piece d’accueil pour les animaux"
-        animal_food_building_division: "Piece d’accueil pour les aliments"
+        # animal_division: "Animal division"
+        # animal_food_division: "Animal food division"
         animal_waste_building_division: "Zone des déchets organiques"
         annual_fallow_crop: "Jachère annuelle"
         anti_slug: "Anti-limace"
@@ -2077,6 +2078,7 @@ fra:
         female_hen_band: "Bande de poule"
         female_young_cow: "Génisse"
         flap_silt_land_parcel: "Parcelle de limons battants"
+        # food_equipment_division: "Food equipment division"
         forager: "Ensileuse"
         garlic_crop: "Culture d’ail"
         gas: "Gaz"
@@ -2119,6 +2121,7 @@ fra:
         manure_division: "Fumière"
         merlot_noir_so4_vine_seedling: "Plant de Merlot Noir sur so4"
         milk_tank: "Tank à lait"
+        # milking_division: "Milking division"
         mineral_cleaner: "Nettoyant chimique"
         mineral_feed_block_25: "Bloc de sel mineral en 25kg"
         miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
@@ -2160,7 +2163,9 @@ fra:
         sandy_clay_loam_land_parcel: "Parcelle limono-argileuse"
         screed_building: "Construction béton (silo, chape, terrasse)"
         seed: "Semence"
+        # settlement: "Settlement"
         silage: "Ensilage"
+        # silage_division: "Silage division"
         silt_land_parcel: "Parcelle limoneuse"
         silt_schist_land_parcel: "Parcelle limoneuse sur schiste ou gneiss"
         silty_clay_land_parcel: "Parcelle argilo-limoneuse"
@@ -2255,6 +2260,7 @@ fra:
         female_young_cow: "Génisse"
         fertilizer_division: "Zone de stockage des engrais"
         food: "Aliment"
+        # food_equipment_division: "Food equipment division"
         forager: "Ensileuse"
         fruit: "Fruit"
         fruit_crop: "Culture fruitière"
@@ -2292,6 +2298,8 @@ fra:
         running_water: "Eau du réseau"
         salmon_band: "Bande de saumon"
         seed: "Semence"
+        # settlement: "Settlement"
+        # silage_division: "Silage division"
         small_equipment: "Petit matériel"
         sower: "Semoir"
         sprayer: "Pulvérisateur"
