--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1527,6 +1527,7 @@ arb:
         # plant_medicine: "Produit phytosanitaire"
         # running_water: "Eau du réseau"
         # seed: "Semence"
+        # settlement: "Aménagement / Implantation"
         # small_equipment: "Petit matériel"
         # straw: "Paille"
         # wine: "Vin"
@@ -1572,6 +1573,8 @@ arb:
         # alfalfa_seed: "Semence de luzerne"
         # all_inclusive_corn_sower: "Semoir Maïs tout intégré"
         # animal_building: "Bâtiment d’accueil pour les animaux"
+        # animal_division: "Zone accueillant des animaux"
+        # animal_food_division: "Zone accueillant des aliments pour animaux"
         # animal_waste_building_division: "Zone des déchets organiques"
         # annual_fallow_crop: "Jachère annuelle"
         # anti_slug: "Anti-limace"
@@ -1646,6 +1649,7 @@ arb:
         # female_hen_band: "Bande de poule"
         # female_young_cow: "Génisse"
         # flap_silt_land_parcel: "Parcelle de limons battants"
+        # food_equipment_division: "Zone de stockage des aliments et du matériels"
         # forager: "Ensileuse"
         # garlic_crop: "Culture d’ail"
         # gas: "Gaz"
@@ -1688,6 +1692,7 @@ arb:
         # manure_division: "Fumière"
         # merlot_noir_so4_vine_seedling: "Plant de Merlot Noir sur so4"
         # milk_tank: "Tank à lait"
+        # milking_division: "Laiterie"
         # mineral_cleaner: "Nettoyant chimique"
         # mineral_feed_block_25: "Bloc de sel mineral en 25kg"
         # miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
@@ -1729,7 +1734,9 @@ arb:
         # sandy_clay_loam_land_parcel: "Parcelle limono-argileuse"
         # screed_building: "Construction béton (silo, chape, terrasse)"
         # seed: "Semence"
+        # settlement: "Aménagement"
         # silage: "Ensilage"
+        # silage_division: "Zone de stockage de l'ensilage"
         # silt_land_parcel: "Parcelle limoneuse"
         # silt_schist_land_parcel: "Parcelle limoneuse sur schiste ou gneiss"
         # silty_clay_land_parcel: "Parcelle argilo-limoneuse"
@@ -1822,6 +1829,7 @@ arb:
         # female_young_cow: "Génisse"
         # fertilizer_division: "Zone de stockage des engrais"
         # food: "Aliment"
+        # food_equipment_division: "Zone de stockage des équipements et des aliments"
         # forager: "Ensileuse"
         # fruit: "Fruit"
         # fruit_crop: "Culture fruitière"
@@ -1859,6 +1867,8 @@ arb:
         # running_water: "Eau du réseau"
         # salmon_band: "Bande de saumon"
         # seed: "Semence"
+        # settlement: "Aménagement"
+        # silage_division: "Zone de stockage de l'ensilage"
         # small_equipment: "Petit matériel"
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
