Adds tool to convert spatial references

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -2104,6 +2104,8 @@ eng:
         # swamp_peaty_soil: "Terre de marais tourbeux"
         # valley_terrace_soil: "Sols de terrasse de vallée"
       # name: "Types de sols"
+    spatial_reference_systems:  #?
+ #?
     taxes:
       attributes:
         # active: "actif"
