--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1984,6 +1984,8 @@ arb:
         # swamp_peaty_soil: "Terre de marais tourbeux"
         # valley_terrace_soil: "Sols de terrasse de vallée"
       # name: "Types de sols"
+    spatial_reference_systems:  #?
+ #?
     taxes:
       attributes:
         # active: "actif"
