--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1986,6 +1986,8 @@ jpn:
         # swamp_peaty_soil: "Terre de marais tourbeux"
         # valley_terrace_soil: "Sols de terrasse de vallée"
       # name: "Types de sols"
+    spatial_reference_systems:  #?
+ #?
     taxes:
       attributes:
         # active: "actif"
