--- a/README.rdoc
+++ b/README.rdoc
@@ -17,7 +17,7 @@ https://github.com/ekylibre/ekylibre/wiki/Une-semaine-en-Ekylibre.
 
 == Screenshot
 
-![screenshot](https://raw.github.com/ekylibre/ekylibre/master/doc/screenshots/screens.png "Screenshot showing different views of Ekylibre in action")
+{<img src="https://raw.github.com/ekylibre/ekylibre/master/doc/screenshots/screens.png" />}
 
 == Installation
 
