Tries to fix GeometryCollection  unions but too hard for headache

--- a/README.rdoc
+++ b/README.rdoc
@@ -17,7 +17,7 @@ https://github.com/ekylibre/ekylibre/wiki/Une-semaine-en-Ekylibre.
 
 == Screenshot
 
-{<img src="https://raw.github.com/ekylibre/ekylibre/master/doc/screenshots/screens.png" />}[https://raw.github.com/ekylibre/ekylibre/master/doc/screenshots/screens.png]
+{<img src="https://raw.github.com/ekylibre/ekylibre/master/doc/screenshots/screens.jpg" />}[https://raw.github.com/ekylibre/ekylibre/master/doc/screenshots/screens.png]
 
 == Installation
 
