--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1056,6 +1056,7 @@ eng:
     critic_stock_min: "Critic stock min"
     critic_stocks: "Stocks below critical threshold"
     # cropping_plan: "Assolement"
+    # cropping_plan_chart: "Assolement"
     # cropping_plan_on_cultivable_zones: "Assolement (Parcelles culturales)"
     csv_statistics: "CSV statistics"
     cumul: "Accumulation of tattle and previous balance N°%{number}"
