complete crops and linked nomenclatures.

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1739,6 +1739,7 @@ eng:
         # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
         # land_parcel_cluster: "Îlot"
+        # lavender_crop: "Culture de lavande"
         # lentil_crop: "Culture de lentille"
         # male_adult_cow: "Taureau"
         # male_hen_band: "Bande de poulet"
@@ -1746,6 +1747,7 @@ eng:
         # manager: "Responsable"
         # manual_implanter: "Plantoir"
         # manure_division: "Fumière"
+        # melon_crop: "Culture de melon"
         # merlot_noir_so4_vine_seedling: "Plant de Merlot Noir sur so4"
         # milk_tank: "Tank à lait"
         # milking_division: "Laiterie"
@@ -1820,6 +1822,7 @@ eng:
         # tablur_hard_wheat_seed_25: "Semence de blé dur Tablur sac de 25kg"
         # technician: "Technicien"
         # temporary_meadow_crop: "Culture de prairie temporaire"
+        # tobacco_crop: "Culture de tabac"
         # tractor: "Tracteur"
         # trailer: "Remorque"
         # triticale_crop: "Culture de Triticale"
@@ -1988,9 +1991,11 @@ eng:
         # horsebean: "Féverolle"
         identification: "Identification" #?
         land_parcel_management: "Land parcel management" #?
+        # lavender: "Lavande"
         # laying_hen: "Poule pondeuse"
         # lentil: "Lentille"
         marketing: "Marketing" #?
+        # melon: "Melon"
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
         # oyster: "Huître"
@@ -2014,6 +2019,7 @@ eng:
         # strawberry: "Fraise"
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
+        # tobacco: "Tabac"
         transformation: "Transformation" #?
         # triticale: "Triticale"
         vegetal_crops: "Vegetal crops" #?
@@ -2233,6 +2239,8 @@ eng:
         # corylus: "Corylus"
         # cot_noir: "Cot noir"
         # courtot: "Courtot"
+        # cucumis: "Melon"
+        # cucurbitaceae: "Cucurbitaceae"
         # cultivable_zone: "Zone cultivable"
         # cultur: "Cultur"
         # daucus: "Carotte"
@@ -2284,9 +2292,11 @@ eng:
         # juglandaceae: "Juglandaceae"
         # juglans: "Juglans"
         # karur: "Karur"
+        # lamiaceae: "Lamiaceae"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
         # land_parcel_group: "Groupe de parcelles physiques"
+        # lavandula: "Lavande"
         # lens: "Lentille"
         # lepus: "Lagomorphe"
         # levis: "Levis"
@@ -2313,6 +2323,7 @@ eng:
         # molluscicide: "Produit molluscicide"
         # mower: "Faucheuse"
         # muscadelle_blanc: "Muscadelle blanc"
+        # nicotiana: "Tabac"
         # numida: "Numididae"
         # oratorio: "Oratorio"
         organic_matter: "Organic matter"
