--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -96,6 +96,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -147,9 +149,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -176,6 +180,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -327,6 +332,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -378,9 +385,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -407,6 +416,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -558,6 +568,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -609,9 +621,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -638,6 +652,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -1053,6 +1068,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -1104,9 +1121,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -1133,6 +1152,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -1354,6 +1374,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -1405,9 +1427,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -1434,6 +1458,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -1787,6 +1812,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -1838,9 +1865,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -1867,6 +1896,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -2126,6 +2156,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -2177,9 +2209,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -2206,6 +2240,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -2357,6 +2392,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -2408,9 +2445,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -2437,6 +2476,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -2729,6 +2769,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -2780,9 +2822,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -2809,6 +2853,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -2960,6 +3005,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -3011,9 +3058,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -3040,6 +3089,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -3240,6 +3290,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -3291,9 +3343,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -3320,6 +3374,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -3471,6 +3526,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -3522,9 +3579,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -3551,6 +3610,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -3702,6 +3762,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -3753,9 +3815,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -3782,6 +3846,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -3932,6 +3997,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -3983,9 +4050,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -4012,6 +4081,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -4163,6 +4233,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -4214,9 +4286,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -4243,6 +4317,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -4394,6 +4469,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -4445,9 +4522,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -4474,6 +4553,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -4710,6 +4790,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -4761,9 +4843,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -4790,6 +4874,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -4974,6 +5059,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -5025,9 +5112,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -5054,6 +5143,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -5204,6 +5294,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -5255,9 +5347,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -5284,6 +5378,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
@@ -5623,6 +5718,8 @@ fra:
         corylus: "Corylus"
         cot_noir: "Cot noir"
         courtot: "Courtot"
+        cucumis: "Melon"
+        cucurbitaceae: "Cucurbitaceae"
         cultivable_zone: "Zone cultivable"
         cultur: "Cultur"
         daucus: "Carotte"
@@ -5674,9 +5771,11 @@ fra:
         juglandaceae: "Juglandaceae"
         juglans: "Juglans"
         karur: "Karur"
+        lamiaceae: "Lamiaceae"
         land_parcel: "Parcelle physique"
         land_parcel_cluster: "Îlot"
         land_parcel_group: "Groupe de parcelles physiques"
+        lavandula: "Lavande"
         lens: "Lentille"
         lepus: "Lagomorphe"
         levis: "Levis"
@@ -5703,6 +5802,7 @@ fra:
         molluscicide: "Produit molluscicide"
         mower: "Faucheuse"
         muscadelle_blanc: "Muscadelle blanc"
+        nicotiana: "Tabac"
         numida: "Numididae"
         oratorio: "Oratorio"
         organic_matter: "Matière organique"
