--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1652,6 +1652,7 @@ arb:
         # irrigation_water: "Eau (irrigation)"
         # land_parcel: "Parcelle"
         # land_parcel_cluster: "Îlot"
+        # lavender_crop: "Culture de lavande"
         # lentil_crop: "Culture de lentille"
         # male_adult_cow: "Taureau"
         # male_hen_band: "Bande de poulet"
@@ -1659,6 +1660,7 @@ arb:
         # manager: "Responsable"
         # manual_implanter: "Plantoir"
         # manure_division: "Fumière"
+        # melon_crop: "Culture de melon"
         # merlot_noir_so4_vine_seedling: "Plant de Merlot Noir sur so4"
         # milk_tank: "Tank à lait"
         # milking_division: "Laiterie"
@@ -1733,6 +1735,7 @@ arb:
         # tablur_hard_wheat_seed_25: "Semence de blé dur Tablur sac de 25kg"
         # technician: "Technicien"
         # temporary_meadow_crop: "Culture de prairie temporaire"
+        # tobacco_crop: "Culture de tabac"
         # tractor: "Tracteur"
         # trailer: "Remorque"
         # triticale_crop: "Culture de Triticale"
@@ -1877,8 +1880,10 @@ arb:
         # grain_corn: "Maïs grain"
         # hazel: "Noisettier"
         # horsebean: "Féverolle"
+        # lavender: "Lavande"
         # laying_hen: "Poule pondeuse"
         # lentil: "Lentille"
+        # melon: "Melon"
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
         # oyster: "Huître"
@@ -1898,6 +1903,7 @@ arb:
         # strawberry: "Fraise"
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
+        # tobacco: "Tabac"
         # triticale: "Triticale"
         # vine: "Vigne"
         # walnut: "Noyer"
@@ -2113,6 +2119,8 @@ arb:
         # corylus: "Corylus"
         # cot_noir: "Cot noir"
         # courtot: "Courtot"
+        # cucumis: "Melon"
+        # cucurbitaceae: "Cucurbitaceae"
         # cultivable_zone: "Zone cultivable"
         # cultur: "Cultur"
         # daucus: "Carotte"
@@ -2164,9 +2172,11 @@ arb:
         # juglandaceae: "Juglandaceae"
         # juglans: "Juglans"
         # karur: "Karur"
+        # lamiaceae: "Lamiaceae"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
         # land_parcel_group: "Groupe de parcelles physiques"
+        # lavandula: "Lavande"
         # lens: "Lentille"
         # lepus: "Lagomorphe"
         # levis: "Levis"
@@ -2193,6 +2203,7 @@ arb:
         # molluscicide: "Produit molluscicide"
         # mower: "Faucheuse"
         # muscadelle_blanc: "Muscadelle blanc"
+        # nicotiana: "Tabac"
         # numida: "Numididae"
         # oratorio: "Oratorio"
         # organic_matter: "Matière organique"
