--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1440,8 +1440,10 @@ fra:
           100g_dose: "dose de 100g"
           10ml_dose: "dose de 10ml"
           12kg_bag: "sac de 12kg"
+          150TG_bag: "sac de 150.000 grains"
           1l_dose: "dose de 1l"
           25kg_bag: "sac de 25kg"
+          50TG_bag: "sac de 50.000 grains"
           bag: "sac"
           band: "Bande"
           box: "boîte"
@@ -1500,7 +1502,7 @@ fra:
         cattle_liquid_slurry: "Purin de bovins"
         cattle_manure: "Fumier de bovins"
         cattle_slurry: "Lisier de bovins"
-        cereals_feed_bag_25: "Aliments céréales en sac de 25 kg"
+        cereals_feed_bag_25: "Aliments céréales - sac de 25 kg"
         champagne_land_parcel: "Parcelle sur craie Sud Charente et Charente-Martime  (terre de champagne)"
         chemical_fertilizer_division: "Emplacement de stockage des engrais"
         clay_land_parcel: "Parcelle d’argile lourde"
@@ -1513,16 +1515,17 @@ fra:
         coop:bth_s_euclide_r1_gau+red_25kg: "Semence de Blé tendre Euclide (r1 gau+ red) sac de 25kg"
         coop:bth_s_rubisko_r1_gau+red_25kg: "Semence de Blé tendre Rubisko (r1 gau+ red) sac de 25kg"
         coop:chlorure_60%_gr_vr: "chlorure COOP 60% gr vrac"
-        coop:ficelle_filogamm_350_bob_5kg: "ficelle filogamm 350 bob 5kg"
+        coop:ficelle_filogamm_350_bob_5kg: "ficelle filogamm 350  - bobine 5kg"
         coop:metarex_ino_20kg: "metarex ino sac de 20kg"
-        coop:metarex_rg_tds_20kg: "metarex rg tds sac de 20kg"
-        coop:sel_mer_essore_la_baleine_sac_25kg: "sel mer essore la baleine sac 25kg"
+        coop:metarex_rg_tds_20kg: "metarex rg tds - sac de 20kg"
+        coop:sel_mer_essore_la_baleine_sac_25kg: "sel mer essore la baleine - sac de 25kg"
         coop:super_46%_gr._vr: "super 46% COOP gr vrac"
         coop:uree_gr_vrac: "uree gr vrac"
         corn_crop: "Culture de maïs"
         corn_grain: "Graine de maïs"
         corn_grain_crop: "Culture de maïs grain"
-        corn_seed_25: "Semence de maïs sac de 25kg"
+        corn_seed_25: "Semence de maïs - sac de 25kg"
+        corn_seed_50TG: "Semence de maïs - sac de 50.000 grains"
         corn_seed_crop: "Culture de maïs semence"
         corn_silage_crop: "Culture de maïs ensilage"
         cow_milk: "Lait de vache"
@@ -1555,12 +1558,11 @@ fra:
         granulated_insecticide_12: "Insecticide granulés"
         grape_reaper: "Machine à vendanger"
         grass: "Herbe"
-        grass_seed_25: "Semence de prairie sac de 25kg"
         green_compost: "Compost de déchets verts"
         guineafowl_manure: "Fumier de pintades"
         hard_wheat_crop: "Culture de blé dur"
         hard_wheat_grain: "Graine de blé dur"
-        hard_wheat_seed_25: "Semence de blé dur 25kg"
+        hard_wheat_seed_25: "Semence de blé dur - sac de 25kg"
         hard_wheat_straw: "Paille de blé dur"
         hard_wheat_straw_bales: "Bottes de paille de blé dur"
         hay_rake: "Andaineur"
@@ -1592,7 +1594,7 @@ fra:
         milk_tank: "Tank à lait"
         milking_division: "Laiterie"
         mineral_cleaner: "Nettoyant chimique"
-        mineral_feed_block_25: "Bloc de sel mineral en 25kg"
+        mineral_feed_block_25: "sel mineral - bloc de 25kg"
         miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
         miradoux_hard_wheat_seed_25: "Semence de blé dur Miradoux"
         mixed_chemical_fertilizer: "Mélange d’engrais"
@@ -1641,10 +1643,10 @@ fra:
         silty_clay_loam_land_parcel: "Parcelle limono-argileuse"
         small_equipment: "Petit matériel"
         sorghum_crop: "Culture de sorgho"
-        sorghum_seed_25: "Semence de sorgho sac de 25kg"
+        sorghum_seed_25: "Semence de sorgho - sac de 25kg"
         sower: "Semoir"
         soy_crop: "Culture de soja"
-        spelt_seed_25: "Semence d’épeautre sac de 25kg"
+        spelt_seed_25: "Semence d’épeautre - sac de 25kg"
         spelt_wheat_crop: "Culture d’épeautre"
         sprayer: "Pulvérisateur"
         spread_renting: "Location d’épandeur"
@@ -1656,6 +1658,7 @@ fra:
         strawberry_crop: "Culture de fraisier"
         sugar_vinasse: "Vinasse de sucrerie"
         sunflower_crop: "Culture de tournesol"
+        sunflower_seed_150TG: "Semence de tournesol - sac de 150.000 grains"
         superficial_plow: "Cultipacker"
         swamp_peaty_land_parcel: "Parcelle de marais tourbeux"
         tablur_hard_wheat_crop: "Culture de blé dur Tablur"
